--- a/templates/gotemplates.tmpl
+++ b/templates/gotemplates.tmpl
@@ -11,6 +11,15 @@
 </html>
 {{end}}
 
+{{ define "eps.home" -}}
+<h1> hello world </h1>
+{{end}}
+
+{{ define "eps.url2" -}}
+index.html
+{{-end}}
+
+
 
 {{define "eps.url" -}}
 {{.name}}-{{.entityId}}-{{.locale}}.html
